fix(workflow): add packages read permission

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: read
       actions: write
+      packages: read
     uses: tehw0lf/workflows/.github/workflows/build-test-publish.yml@main
     with:
       event_name: ${{ github.event_name }}
