fix(workflow): add secrets inherit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   build:
     uses: tehw0lf/workflows/.github/workflows/build-test-publish.yml@main
+    secrets: inherit
     with:
       event_name: ${{ github.event_name }}
       tool: npm
