--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
 
 permissions:
-  contents: read
+  contents: write
   actions: write
-  packages: read
+  packages: write
 
 jobs:
   build:
